--- a/examples/treegrid/treegrid-1.html
+++ b/examples/treegrid/treegrid-1.html
@@ -3,12 +3,6 @@
 <head>
 <meta charset="utf-8" />
 
-<!--
-  Give this example implementation a name and put it in the title element,
-  e.g., "Checkbox" if implementing the checkbox pattern.
-  The name should be unique if the pattern will have multiple implementations,
-  e.g., "Simple Two-State Checkbox" or "Three-State Checkbox".
--->
 <title>Treegrid Email Inbox Example | WAI-ARIA Authoring Practices 1.1</title>
 
 <!--  Core js and css shared by all examples; do not modify when using this template. -->
@@ -83,18 +77,8 @@ document.addEventListener('DOMContentLoaded', function () {
     The following example demonstrates how the
     <a href="../../#treegrid">treegrid design pattern (TBD)</a>
     can be used to make an interactive tree that enables users to navigate the hierarchical structure of email conversations
-    and also provides the ability to navigate to elements that describe each email, such as subject and sender.
-  </p>
-  <p>
-    This same example can be used in three ways.
-  </p>
-  <ul>
-    <li id="option-cell-focus-allow"><a href="./treegrid-1.html">Rows are focused first, but cells can be focused</a>:<br>Useful when we want to present the treegrid to act primarily like a tree.</li>
-    <li id="option-cell-focus-start"><a href="./treegrid-1.html?cell=start">Cells are focused first, but rows can also be focused</a>:<br>Useful when we want to present the treegrid to act primarily like a grid.</li>
-    <li id="option-cell-focus-force"><a href="./treegrid-1.html?cell=force">Only cells can be focused</a>:<br>Useful when we we are primarily a grid, and we want to simplify the user experience by removing row navigation options.</li>
-  </ul>
-  <p>
-    Note: no row-only version is provided. A row-only navigation version could be useful when the columns are guaranteed to fit horizontally (no horizontal scrolling necessary), the columns are merely for attractive presentation, as opposed to addressing any need to visit them individually. However, in this case the author can simply follow the tree pattern and present the child treeitem data in columns.
+    and also provides the ability to navigate to elements that describe each email, such as subject, summary and sender.
+    This example uses the roving tabindex technqiue to manage the tabbing into and our of the treegrid and tabindex values are managed through javascript.
   </p>
 
   <section>
@@ -107,7 +91,7 @@ document.addEventListener('DOMContentLoaded', function () {
       The div for the rendered HTML source is in the last section of the page.
     -->
     <div id="ex1">
-      <table id="treegrid" role="treegrid" aria-label="ARIA treegrid example">
+      <table id="treegrid" role="treegrid" aria-readonly="true" aria-label="ARIA treegrid example">
         <colgroup>
           <col id="treegrid-col1">
           <col id="treegrid-col2">
@@ -166,44 +150,13 @@ document.addEventListener('DOMContentLoaded', function () {
     </div>
 
     <div role="separator" id="ex_end_sep" aria-labelledby="ex_end_sep ex_label" aria-label="End of"></div>
-    <h4>Notes</h4>
-    <p>In general, this type of treegrid acts mostly as a tree with cells. The interactions
-    are the same as a tree, until one begins navigating by cells (via tab to an interactive cell or
-    right arrow on an expanded row).</p>
-
-  </section>
-
-  <section>
-    <h2>Accessibility Features</h2>
-    <p>Markup used:</p>
-    <ul>
-      <li>roles used are treegrid, row, gridcell and columnheader.</li>
-      <li>aria-level: used to set the current level of an item, 1, 2, 3, etc.</li>
-      <li>aria-posinset, aria-setsize: used on a row to indicate the position of an item within it's local group, such as item 3 of 5. Unfortunately, <a href="https://github.com/w3c/aria/issues/558">aria-posinset and aria-setsize are not currently legal in the spec (bug filed)</a>. Therefore, <a href="https://bugzilla.validator.nu/show_bug.cgi?id=1033">aria-posinset and aria-setsize are not currently supported on role="row" in the Nu Validator (bug filed)</a>. We'll need to work that in as this is the most practical way of implementing ARIA in many existing treegrid libraries (as opposed to rearchitecting the
-      DOM structure to contain rowgroups). Note that the <a href="https://github.com/w3c/aria/issues/553">ARIA spec's text for rowgroup states that it cannot be parented by a treegrid (bug filed)</a>.</li>
-      <li>aria-expanded (tristate): this attribute must be removed (not present) if the item cannot be expanded. For expandable items, the value is "true" or "false".<br>IMPORTANT: aria-expanded is set on the row unless rows cannot receive focus, because it is an indicator to the user that something is actionable. If only the cell can get focused, then pressing Enter on the cell is the only way to indicate this, so the attribute needs to go there so that screen readers will announce it. It is not added to the cell if rows can receive focus, as this provides a confusing/redundant experience where both the row and first cell announce the expanded state. In this example, JavaScript is used to move the aria-expanded attribute down to the first cell in the ?cell=force version.</li>
-      <li>aria-hidden: set to "true" for child items that are currently hidden because the parent is collapsed.</li>
-      <li>tabindex is set in the JS, as per the usual roving tabindex methodology. Specifically, we use tabindex="0" for the current item so that it is the subitem that gets focused if user tabs out and back in, and tabindex="-1" for all items where we want click-to-focus behavior enabled.</li>
-    </ul>
-
-    <p>Not used in this example:</p>
-    <ul>
-      <li>aria-rowindex, aria-rowcount, aria-colindex, aria-colcount are not currently used, as UA/AT can compute this for fully loaded table DOMs.</li>
-      <li>aria-owns: not currently used, as it would be confusing to have conceptual children (other rows) vs. layout children (cells) being on the same level.</li>
-      <li>aria-activedescendant: this example uses to roaming tabindex method instead.</li>
-      <li>aria-multiselectable and aria-selected: used on row in the case of a multiselectable treegrid where each row begins with a checkbox. Must be set to false or true so that it is clear that row is selectable. Unfortunately some screen readers will read "selected" for each row even in the single selection case.</li>
-      <li>aria-labelledby or aria-describedby for headers? Not currently used, awaiting discussion. Some UA + screen reader combinations seem to be determining this automatically via the table structure.</li>
-      <li>aria-readonly: in ARIA 1.0, a grid/treegrid is editable by default. However, there is no default in ARIA 1.1. Firefox currently implements the ARIA 1.0 concept for this, which means that "editable" is read for every cell unless aria-readonly="true" is used on the treegrid. <a href="https://bugzilla.mozilla.org/show_bug.cgi?id=1359482">A bug has been filed in Mozilla to not propagate the readonly/editable state to descendant gridcells unless it is specified via aria-readonly</a>.</li>
-    </ul>
 
   </section>
 
   <section>
     <h2 id="kbd_label">Keyboard Support</h2>
 
-    <p>Note (TBD): the behavior for <kbd>Left arrow</kbd> and <kbd>Right arrow</kbd> should be switched for right-to-left language content!!</p>
-
-    <table aria-labelledby="kbd_label" class="def">
+     <table aria-labelledby="kbd_label" class="def">
       <thead>
         <tr>
           <th>Key</th>
@@ -370,30 +323,200 @@ document.addEventListener('DOMContentLoaded', function () {
       </thead>
       <tbody>
         <tr>
-          <th scope="row"><code>RoleName</code></th>
+          <th scope="row"><code>treegrid</code></th>
           <td><!--  Leave this cell blank in rows where a role is being described. --></td>
-          <td><code>HTML_ELEMENT</code></td>
+          <td><code>table</code></td>
           <td>
-            Describe usage/purpose, e.g., indicates the focusable element that serves as the ...
+            Identifies the element as a <code>treegrid</code>.
           </td>
         </tr>
         <tr>
           <td>
-            <!--  Leave this cell blank in rows that describe attributes applied to the element with the previously described role.
-              Make a row like this for each attribute/value pair.
-          -->
           </td>
-          <th scope="row"><code>AttributeName=<q>AttributeValue</q></code></th>
-          <td><code>HTML_ELEMENT</code></td>
+          <th scope="row"><code>aria-readonly=<q>true</q></code></th>
+          <td><code>table</code></td>
           <td>
             <ul>
-              <li>explanation of usage, purpose, benefit, and/or guidance relevant to this implementation.</li>
-              <li>If making multiple statements, use list for brevity and clarity</li>
-              <li>Do not make a single item list.</li>
+              <li>This example is a treegrid of e-mail messages and the content cannot be edited, <code>aria-readonly</code> is set to indicate the content cannot be edited.</li>
+              <li>The <code>aria-readonly</code> value is propogated to each gridcell contained in the treegrid.</li>
             </ul>
           </td>
         </tr>
-      </tbody>
+        <tr>
+          <td>
+          </td>
+          <th scope="row"><code>aria-label=<q>ARIA Treegrid Example</q></code></th>
+          <td><code>table</code></td>
+          <td>
+            <ul>
+              <li>Provides an accessible name for the <code>treegrid</code>.</li>
+              <li><code>treegrid</code> requires an accessible name.</li>
+            </ul>
+          </td>
+        </tr>
+        <tr>
+          <th scope="row"><code>columnheader</code></th>
+          <td><!--  Leave this cell blank in rows where a role is being described. --></td>
+          <td><code>th</code></td>
+          <td>
+            <ul>
+              <li>Identifies the element as a <code>columnheader</code>.</li>
+              <li>Column headers provide context (e.g. label) for the values of the <code>gridcell</code>s in the <code>treegrid</code>.</li>
+            </ul>
+          </td>
+        </tr>
+        <tr>
+          <th scope="row"><code>row</code></th>
+          <td><!--  Leave this cell blank in rows where a role is being described. --></td>
+          <td><code>tr</code></td>
+          <td>
+            <ul>
+              <li>Identifies the element as a <code>row</code> in the<code>treegrid</code>.</li>
+              <li>The accessible name for the <code>row</code> comes from concatenating the text content of the child <code>gridcell</code>s.</li>
+          </td>
+        </tr>
+        <tr>
+          <td></td>
+          <th scope="row"><code>tabindex=<q>-1</q></code></th>
+          <td><code>tr</code></td>
+          <td>
+            <ul>
+              <li>Makes the <code>row</code> element focusable without including it in the tab sequence of the page.</li>
+              <li>All <code>row</code> and <code>girdcell</code> elements are focusable, but only one is included in the tab sequence.</li>
+             </ul>
+          </td>
+        </tr>
+        <tr>
+          <td></td>
+          <th scope="row"><code>tabindex=<q>0</q></code></th>
+          <td><code>tr</code></td>
+          <td>
+            <ul>
+              <li>Includes the <code>row</code> element in the tab sequence.</li>
+              <li>Only one <code>row</code> or <code>gridcell</code> in the <code>treegrid</code> has <code>tabindex=&quot;0&quot;</code>.</li>
+              <li>In this implementation, the first <code>row</code> in the <code>treegrid</code> is included in the tab sequence when the page loads.</li>
+              <li>
+                When the user moves focus in the <code>treegrid</code>, the element included in the tab sequence changes to the element with focus as described in the section on
+                <a href="../../../#kbd_roving_tabindex">roving tabindex.</a>
+              </li>
+             </ul>
+          </td>
+        </tr>
+        <tr>
+          <td>
+          </td>
+          <th scope="row"><code>aria-expanded=<q>false</q></code></th>
+          <td><code>tr</code></td>
+          <td>
+            <ul>
+              <li>Indicates the <code>row</code> can show or hide other message rows within this <code>treegrid</code>.</li>
+              <li><code>aria-expanded=<q>false</q></code> indictes the message rows that responded to this e-mail are hidden.</li>
+            </ul>
+          </td>
+        </tr>
+        <tr>
+          <td>
+          </td>
+          <th scope="row"><code>aria-expanded=<q>true</q></code></th>
+          <td><code>tr</code></td>
+          <td>
+            <ul>
+              <li>Indicates the <code>row</code> can show or hide other message rows within this <code>treegrid</code>.</li>
+              <li><code>aria-expanded=<q>true</q></code> indictes the message rows that responded to this e-mail are visible.</li>
+            </ul>
+          </td>
+        </tr>
+        <tr>
+          <td>
+          </td>
+          <th scope="row"><code>aria-hidden=<q>false</q></code></th>
+          <td><code>tr</code></td>
+          <td>
+            <ul>
+              <li><code>aria-hidden</code> is used to control the information avaiable to assisitve technologies.</li>
+              <li>When the <code>row</code> is visible (e.g. a top level message or a message whose parent message is expanded), <code>aria-hidden=<q>false</q></code> makes the message row information available to assistive technologies.</li>
+            </ul>
+          </td>
+        </tr>
+        <tr>
+          <td>
+          </td>
+          <th scope="row"><code>aria-hidden=<q>true</q></code></th>
+          <td><code>tr</code></td>
+          <td>
+            <ul>
+              <li><code>aria-hidden</code> is used to control the information avaiable to assisitve technologies.</li>
+              <li>When a message <code>row</code> is <strong>not</strong> visible (e.g. is parent message is collapsed), <code>aria-hidden=<q>true</q></code> <strong>hides</strong> the message row  information from assistive technologies.</li>
+            </ul>
+          </td>
+        </tr>
+        <tr>
+          <td>
+          </td>
+          <th scope="row"><code>aria-level=<q><em>number</em></q></code></th>
+          <td><code>tr</code></td>
+          <td>
+            <ul>
+              <li>The level of the e-mail message identifies a set of messages that share responding to the same parent message row (e.g. same subject line and sender).</li>
+              <li>Top level messages have <code>aria-level=<q>1</q></code>.</li>
+              <li>The <code>aria-level</code> value for other message rows is defined by increasing the level by one over the <code>aria-level</code> value of the parent message.  For example, message rows responding to a top level message have <code>aria-level=<q>2</q>.</li>
+              <li>NOTE: Message rows of the same level and sharing the same parent e-mail are shown or hidden as a group when the parent message row is expanded or contracted.</li>
+            </ul>
+          </td>
+        </tr>
+        <tr>
+          <td>
+          </td>
+          <th scope="row"><code>aria-setsize=<q><em>number</em></q></code></th>
+          <td><code>tr</code></td>
+          <td>
+            Identifies the number of message rows that responded to the parent e-mail message.
+          </td>
+        </tr>
+        <tr>
+          <td>
+          </td>
+          <th scope="row"><code>aria-poinset=<q><em>number</em></q></code></th>
+          <td><code>tr</code></td>
+          <td>
+            Identifies the index of message row in the current set of message rows that responded to the parent e-mail message.
+          </td>
+        </tr>
+        <tr>
+          <th scope="row"><code>gridcell</code></th>
+          <td><!--  Leave this cell blank in rows where a role is being described. --></td>
+          <td><code>td</code></td>
+          <td>
+            Identifies the element as a <code>gridcell</code>.
+          </td>
+        </tr>
+        <tr>
+          <td></td>
+          <th scope="row"><code>tabindex=<q>-1</q></code></th>
+          <td><code>td</code></td>
+          <td>
+            <ul>
+              <li>Makes the <code>gridcell</code> element focusable without including it in the tab sequence of the page.</li>
+              <li>All <code>row</code> and <code>girdcell</code> elements are focusable, but only one is included in the tab sequence.</li>
+             </ul>
+          </td>
+        </tr>
+        <tr>
+          <td></td>
+          <th scope="row"><code>tabindex=<q>0</q></code></th>
+          <td><code>td</code></td>
+          <td>
+            <ul>
+              <li>Includes the <code>gridcell</code> element in the tab sequence.</li>
+              <li>Only one <code>row</code> or <code>gridcell</code> in the <code>treegrid</code> has <code>tabindex=&quot;0&quot;</code>.</li>
+              <li>In this implementation, the first <code>row</code> in the <code>treegrid</code> is included in the tab sequence when the page loads.</li>
+              <li>
+                When the user moves focus in the <code>treegrid</code>, the element included in the tab sequence changes to the element with focus as described in the section on
+                <a href="../../../#kbd_roving_tabindex">roving tabindex.</a>
+              </li>
+             </ul>
+          </td>
+        </tr>      </tbody>
     </table>
   </section>
 
@@ -403,11 +526,11 @@ document.addEventListener('DOMContentLoaded', function () {
     <ul>
       <li>
         CSS:
-        <a href="css/treegrid-1.css" type="tex/css">example_name.css</a>
+        <a href="css/treegrid-1.css" type="text/css">treegrid-1.css</a>
       </li>
       <li>
         Javascript:
-        <a href="js/treegrid-1.js" type="text/javascript">example_name.js</a>
+        <a href="js/treegrid-1.js" type="text/javascript">treegrid-1.js</a>
       </li>
     </ul>
   </section>
