--- a/examples/treegrid/treegrid-1.html
+++ b/examples/treegrid/treegrid-1.html
@@ -71,7 +71,7 @@ document.addEventListener('DOMContentLoaded', function () {
       <li><a href="../../#browser_and_AT_support">Browser and Assistive Technology Support</a></li>
       <li><a href="https://github.com/w3c/aria-practices/issues/new">Report Issue</a></li>
       <li><a href="project_url">Related Issues</a></li>
-      <li><a href="../../#pattern_id">Design Pattern</a></li>
+      <li><a href="../../#treegrid">Treegrid Design Pattern</a></li>
     </ul>
 </nav>
   <main>
