Collapsible Listbox example: Add missing aria-labelledby to documentation table
For issue #584, modified listbox-collapsible.html.
In the roles, states, and properties table,
added row to document the use of aria-labelledby on the button element.

--- a/examples/listbox/listbox-collapsible.html
+++ b/examples/listbox/listbox-collapsible.html
@@ -193,6 +193,18 @@
       <tbody>
         <tr>
           <td></td>
+          <th scope="row"><code>aria-labelledby=&quot;ID_REF1 ID_REF2&quot;</code></th>
+          <td><code>button</code></td>
+          <td>
+            <ul>
+              <li>References the two elements whose labels are concatenated by the browser to label the button.</li>
+              <li>The first element is a span containing text <q>Choose an element: </q>.</li>
+              <li>The second element is the button itself; the button text is set to the name of the currently chosen element.</li>
+            </ul>
+          </td>
+        </tr>
+        <tr>
+          <td></td>
           <th scope="row"><code>aria-haspopup=&quot;listbox&quot;</code></th>
           <td><code>button</code></td>
           <td>Indicates that activating the button displays a listbox.</td>
