--- a/aria-practices.html
+++ b/aria-practices.html
@@ -1986,9 +1986,9 @@
     <section class="widget" id="radiobutton">
       <h3>Radio Group</h3>
       <p>
-        A radio group is a set of checkable buttons, known as radio buttons, where no more than one of 
+        A radio group is a set of checkable buttons, known as radio buttons, where no more than one of
         the buttons can be checked at a time.
-        Some implementations may initialize the set with all buttons in the unchecked state in order to 
+        Some implementations may initialize the set with all buttons in the unchecked state in order to
         force the user to check one of the buttons before moving past a certain point in the workflow.
       </p>
 
@@ -2399,7 +2399,7 @@
               <li><kbd>End</kbd> (Optional): Moves focus to the last tab. Optionally, activates the newly focused tab (See note below).</li>
               <li><kbd>Shift + F10</kbd>: If the tab has an associated pop-up menu, opens the menu. </li>
               <li>
-                <kbd>Delete</kbd> (Optional): If deletion is allowed, deletes (closes) the current tab element and its associated tab panel, 
+                <kbd>Delete</kbd> (Optional): If deletion is allowed, deletes (closes) the current tab element and its associated tab panel,
                 sets focus on the tab following the tab that was closed, and optionally activates the newly focused tab. If there is not a tab that followed the tab that was deleted,
                 e.g., the deleted tab was the right-most tab in a left-to-right horizontal tab list,
                 sets focus on and optionally activates the tab that preceded the deleted tab.
@@ -2930,7 +2930,7 @@
         </ul>
         <p class="note">See <a href="#kbd_common_conventions"></a> for cut, copy, and paste key assignments.</p>
       </section>
-        
+
       <section id="treegrid_roles_states_props" class="notoc">
         <h4>WAI-ARIA Roles, States, and Properties</h4>
         <ul>
@@ -4294,7 +4294,7 @@
         <h4>Using <code>aria-colindex</code> When Column Indicies Are Contiguous</h4>
         <p>
           When all the cells in a row have column index numbers that are consecutive integers,
-          <code>aria-colindex</code> can be set on the row element with a value equal to the the index number of the first column in the set.
+          <code>aria-colindex</code> can be set on the row element with a value equal to the index number of the first column in the set.
           Browsers will then compute a column number for each cell in the row.
         </p>
         <p>
@@ -4532,7 +4532,7 @@
       <p>The following example grid uses <code>aria-sort</code> to indicate the rows are sorted from the highest "Quiz 2" score to the lowest "Quiz 2" score.</p>
       <pre>
         <code>
-          &lt;table role=&quot;grid&quot; aria-rowcount=&quot;463&quot; aria-colcount=&quot;13&quot; 
+          &lt;table role=&quot;grid&quot; aria-rowcount=&quot;463&quot; aria-colcount=&quot;13&quot;
             aria-label=&quot;Student grades for history 101&quot;&gt;
             &lt;thead&gt;
               &lt;tr aria-colindex=&quot;10&quot; aria-rowindex=&quot;1&quot;&gt;
@@ -4781,7 +4781,7 @@
               <li>Menu button example bug fixes</li>
               <li>Navigation menubar example bug fixes</li>
               <li>Radio group example styling</li>
-              <li>Tabs pattern, including labeling guidance</li> 
+              <li>Tabs pattern, including labeling guidance</li>
               <li>Tree view pattern, including multi-select guidance</li>
               <li>Tree view example bug fixes</li>
             </ul>
