--- a/examples/listbox/listbox-collapsible.html
+++ b/examples/listbox/listbox-collapsible.html
@@ -35,7 +35,7 @@
   <p>
     The following example implementation of the
     <a href="../../#Listbox">design pattern for listbox</a>
-    demonstrates a collapsible single-select listbox widget that is functionally similar to an HTML <code>select</code> input with the the attribute <code>size=&quot;1&quot;</code>.
+    demonstrates a collapsible single-select listbox widget that is functionally similar to an HTML <code>select</code> input with the attribute <code>size=&quot;1&quot;</code>.
     The widget consists of a button that triggers the display of a listbox.
     In its default state, the widget is collapsed (the listbox is not visible)  and the button label shows the currently selected option from the listbox.
     When the button is activated, the listbox is displayed and the current option is focused and selected.
@@ -216,7 +216,7 @@
           <td>
             <ul>
               <li>Set by the JavaScript when the listbox is displayed.</li>
-              <li>Otherwise, is not present.</li> 
+              <li>Otherwise, is not present.</li>
             </ul>
           </td>
         </tr>
@@ -254,7 +254,7 @@
               <li>When navigation keys, such as <kbd>Down Arrow</kbd>, are pressed, the JavaScript changes the value.</li>
               <li>Enables assistive technologies to know which element the application regards as focused while DOM focus remains on the <code>ul</code> element.</li>
               <li>
-                For more information about this focus management technique, see 
+                For more information about this focus management technique, see
                 <a href="../../../#kbd_focus_activedescendant">Using aria-activedescendant to Manage Focus.</a>
               </li>
             </ul>
