typo: Double word "have"

--- a/aria-practices-DeletedSectionsArchive.html
+++ b/aria-practices-DeletedSectionsArchive.html
@@ -389,7 +389,7 @@
                         tab order. If you create a text field without using a standard HTML text
                         field form control then ensure that it is in the tab order.
                     </li>
-                    <li>If the text field is not editable it must have have <a
+                    <li>If the text field is not editable it must have <a
                         href="#aria-readonly" class="property-reference">aria-readonly</a> = <code>true</code>.
                     </li>
                     <li>The combobox must have <a href="#aria-expanded"
@@ -422,7 +422,7 @@
                         field is in the tab order. If you create a text field without using a
                         standard HTML text field form control then ensure that it is in the tab
                         order.</li>
-                    <li>If the combobox is not editable it must have have <a
+                    <li>If the combobox is not editable it must have <a
                         href="#aria-readonly" class="property-reference">aria-readonly</a> = <code>true</code>.
                     </li>
                     <li>The combobox must have <a href="#aria-expanded"
@@ -2284,7 +2284,7 @@ consistent with their visual rendering. Rather than setting  size only on a cont
 &lt;img src="foo.jpg" id="333" title="Finance Manager Approval"&gt;
 &lt;img src="foo.jpg" id="334" title="Sales Manager Approval"&gt;
 &#8230;  </pre>
-<p>Each element referenced by the flowto must have have a unique id. The combination of the unique id and the name allow the assistive technology  to adequately assist the user in retracing their steps backward through a flow to reference or moving forward to it. Since the author sets only the target the user agent is responsible for mapping the backward reference relationship. Therefore, neither the user agent nor the user can get lost. The host user agent does not provide an alternative navigation order; this is an assistive technology function.</p>
+<p>Each element referenced by the flowto must have a unique id. The combination of the unique id and the name allow the assistive technology  to adequately assist the user in retracing their steps backward through a flow to reference or moving forward to it. Since the author sets only the target the user agent is responsible for mapping the backward reference relationship. Therefore, neither the user agent nor the user can get lost. The host user agent does not provide an alternative navigation order; this is an assistive technology function.</p>
       </li>
       <li id="step3_keyboard">Make sure visual objects are keyboard accessible
         <p>Use tabindex to enable objects to receive focus. Actually setting focus to them may be performed by an assistive technology, such as an alternative input device. This example places each drawing object in  document order with respect to the tab sequence. </p>
