typo: Double word "Career"

--- a/aria-practices-DeletedSectionsArchive.html
+++ b/aria-practices-DeletedSectionsArchive.html
@@ -3305,7 +3305,7 @@ field. </p>
       extensions for Mozilla/Firefox</a> from the University of Illinois at
       Urbana-Champaign to render the document landmarks. This picture
       shows the Firefox browser rendering the University of Illinois
-      Career Career Center home page. In this example. The "List of Navigation Bars" viewer is shown, launched from the extension on the
+      Career Center home page. In this example. The "List of Navigation Bars" viewer is shown, launched from the extension on the
       toolbar. The viewer shows that the secondary "Career Center Services" is selected resulting
       in that section of the document being highlighted in yellow. The
       Navigation Bar Lists Viewer  lists the following list of titles corresponding to the navigation sections:</p>
